--- a/Setuu-Hanuman.html
+++ b/Setuu-Hanuman.html
@@ -43,6 +43,15 @@ box-shadow: 10px -5px 64px -27px black;
             color: #000000;
         }
 
+         .info-container h4{
+            margin: 0;
+            
+            font-weight: bolder;
+             
+            font-size: 24px;
+            color: red;
+        }
+
         .info-container p {
             font-size: 16px;
             color: #151515;
