--- a/Setuu-Hanuman.html
+++ b/Setuu-Hanuman.html
@@ -289,7 +289,7 @@ border: 0px solid #000000;
 
      <div class="info-container">
         <h3>अध्याय - 2</h3>
-        <h4 style="color: #ff6600; font-weight: bolder;"><b>चिरंजीवी भगवान हनुमान के साथ शहद का शिकार</b></h4>
+        <h4 style="color: #ff6600; font-weight: bolder;"><b>चिरंजीवी भगवान हनुमान के साथ शहद की खोज</b></h4>
          <a style="text-decoration:none;" target="_blank" href="https://rajkuma1046.github.io/selfie/Pdf%202_%20Setuu%20Hanuman.pdf">
 
             <button class="download-btn">Download PDF</button>
