--- a/Setuu-Hanuman.html
+++ b/Setuu-Hanuman.html
@@ -48,8 +48,8 @@ box-shadow: 10px -5px 64px -27px black;
             
             font-weight: bolder;
              
-            font-size: 24px;
-            color: red;
+            font-size: 18px;
+            color: black;
         }
 
         .info-container p {
@@ -289,7 +289,7 @@ border: 0px solid #000000;
 
      <div class="info-container">
         <h3>अध्याय - 2</h3>
-        <h4 style="color: #ff6600; font-weight: bolder;"><b>चिरंजीवी भगवान हनुमान के साथ शहद की खोज</b></h4>
+        <h4 ><b>चिरंजीवी भगवान हनुमान के साथ शहद की खोज</b></h4>
          <a style="text-decoration:none;" target="_blank" href="https://rajkuma1046.github.io/selfie/Pdf%202_%20Setuu%20Hanuman.pdf">
 
             <button class="download-btn">Download PDF</button>
@@ -301,7 +301,7 @@ border: 0px solid #000000;
 
         <h3>अध्याय - 3</h3>
 
-        <h4 style="color: #004d90;"></h4>
+        <h4 ></h4>
         <p></p>
         <a style="text-decoration:none;" href="#">
             <button class="download-btn">Available on Thursday</button>
