--- a/Setuu-Hanuman.html
+++ b/Setuu-Hanuman.html
@@ -301,6 +301,18 @@ border: 0px solid #000000;
 
         <h3>अध्याय - 3</h3>
 
+        <h4 > काल के जाल में चिरंजीवी भगवान हनुमान</h4>
+        <p></p>
+        <a style="text-decoration:none;" href="/Pdf 3 _ Setuu Hanuman.pdf">
+            <button class="download-btn">Available on Thursday</button>
+        </a>
+    </div>
+
+     <div class="info-container">
+        <label class="tilted-label">[29 Aug 2024 at 05:00PM]</label>
+
+        <h3>अध्याय - 3</h3>
+
         <h4 ></h4>
         <p></p>
         <a style="text-decoration:none;" href="#">
