--- a/Setuu-Hanuman.html
+++ b/Setuu-Hanuman.html
@@ -303,7 +303,7 @@ border: 0px solid #000000;
 
         <h4 > काल के जाल में चिरंजीवी भगवान हनुमान</h4>
         <p></p>
-        <a style="text-decoration:none;" href="rajkuma1046.github.io/setuu/Pdf 3 _ Setuu Hanuman.pdf">
+        <a style="text-decoration:none;" href="/setuu/Pdf 3 _ Setuu Hanuman.pdf">
             <button class="download-btn">Download</button>
         </a>
     </div>
